force-app/main/default/objects/FormResponse__c/fields/DisplayDescription__c.field-meta.xml
<CustomField>
    <fullName>DisplayDescription__c</fullName>
    <inlineHelpText>Displays on Form Under Form Name</inlineHelpText>
    <label>Display Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>