force-app/main/default/objects/FormResponse__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>FormResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>