force-app/main/default/objects/FormResponse__c/fields/JSONResponse__c.field-meta.xml
<CustomField>
    <fullName>JSONResponse__c</fullName>
    <label>JSON Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>