force-app/main/default/objects/FormResponse__c/fields/ParentFormResponse__c.field-meta.xml
<CustomField>
    <fullName>ParentFormResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Form Response</label>
    <referenceTo>FormResponse__c</referenceTo>
    <relationshipLabel>Child Form Responses</relationshipLabel>
    <relationshipName>ChildFormResponses</relationshipName>
    <type>Lookup</type>
</CustomField>