force-app/main/default/objects/FormResponse__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <formula>ISPICKVAL( Status__c , &apos;Submitted&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>