force-app/main/default/objects/FormResponse__c/fields/RequiredAnswers__c.field-meta.xml
<CustomField>
    <fullName>RequiredAnswers__c</fullName>
    <description>Total number of answered required questions</description>
    <label>Required Answers</label>
    <summaryFilterItems>
        <field>FormQuestionResponse__c.Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FormQuestionResponse__c.Response__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>FormQuestionResponse__c.FormResponse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>