force-app/main/default/objects/FormResponse__c/fields/RequiredCompleted__c.field-meta.xml
<CustomField>
    <fullName>RequiredCompleted__c</fullName>
    <formula>RequiredAnswers__c = RequiredQuestions__c</formula>
    <label>Required Completed</label>
    <type>Checkbox</type>
</CustomField>