force-app/main/default/objects/FormResponse__c/fields/RequiredQuestions__c.field-meta.xml
<CustomField>
    <fullName>RequiredQuestions__c</fullName>
    <inlineHelpText>Total number of required questions</inlineHelpText>
    <label>Required Questions</label>
    <summaryFilterItems>
        <field>FormQuestionResponse__c.Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FormQuestionResponse__c.FormResponse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>