force-app/main/default/objects/FormResponse__c/fields/RootResponse__c.field-meta.xml
<CustomField>
    <fullName>RootResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Response</label>
    <referenceTo>FormResponse__c</referenceTo>
    <relationshipLabel>Root Form Responses</relationshipLabel>
    <relationshipName>RootFormResponses</relationshipName>
    <type>Lookup</type>
</CustomField>