force-app/main/default/objects/FormResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>ParentFormResponse__c</columns>
    <columns>ChildType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>